--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
 			<section class="main-content">
 				<div class="card card-1">
 					<p class="title">Length (Meter/Feet)</p>
-					<p id="length">Lorem ipsum dolor sit amet.</p>
+					<p id="length"></p>
 				</div>
 				<div class="card">
 					<p class="title">Volume (Liters/Gallons)</p>
-					<p id="volume">Lorem ipsum dolor sit amet.</p>
+					<p id="volume"></p>
 				</div>
 				<div class="card">
 					<p class="title">Mass (Kilograms/Pounds)</p>
-					<p id="mass">Lorem ipsum dolor sit amet.</p>
+					<p id="mass"></p>
 				</div>
 			</section>
 		</div>
